--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -17,5 +17,16 @@
 
     <img src="https://www.simplyrecipes.com/thmb/IrINpCiq9QGVUfRNHpAvGiapOfU=/2958x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/Simply-Recipes-Homemade-Pizza-LEAD-2-a4f6dc01259d413fb2a6cd49532ae966.jpg" alt="A picture I stole">
 
+    <p>Anyways, here's an ordered list of steps</p>
+        <ol>
+            <li>Eat Pizza</li>
+            <li>Eat more pizza</li>
+            <li>Pizza forever!</li>
+        </ol>
+    <p>Don't forget:</p>
+        <ul>
+            <li>Cold pizza.</li>
+            <li>Best Pizza.</li>
+        </ul>
 </body>
 </html>
